[project]
name = "agentsystems-sdk"
version = "0.2.0"
description = "AgentSystems Python SDK and CLI"
readme = "README.md"
authors = [ { name = "AgentSystems", email = "support@agentsystems.ai" } ]
license = "Apache-2.0"
requires-python = ">=3.9"
dependencies = ["typer[all]>=0.9"]


[project.scripts]
agentsystems = "agentsystems_sdk.cli:app"

license-files = ["LICENSE", "NOTICE"]

[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"
